# genesis-saas

./: .env.example  .gitignore  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/genesis/: __init__.py  config.py  main.py  types.py
backend/genesis/agents/: claude_client.py  compliance.py  model_resolver.py
backend/genesis/api/v1/: assistants.py  auth.py  builds.py  conversation.py  factories.py  genesis.py  review.py  settings.py  supervisor.py
backend/genesis/assistants/: catalog.py
backend/genesis/auth/: middleware.py  rate_limit.py  ssrf.py  token_manager.py
backend/genesis/db/: models.py  rls.py  session.py
backend/genesis/mcp_servers/: __init__.py  code_quality.py  database.py  design.py  discovery.py  infrastructure.py  registry.py  security.py
backend/genesis/meta/: genesis_engine.py
backend/genesis/pipeline/: architect_agent.py  builder_agent.py  design_agent.py  devops_agent.py  discovery_engine.py  doc_generator.py  interviewer.py  orchestrator.py  requirements_agent.py  reviewer.py  testing_agent.py  work_item_generator.py
backend/genesis/supervisor/: __init__.py  supervisor.py
backend/tests/: test_integration.py
dashboard/: next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
dashboard/src/app/: layout.tsx  page.tsx
dashboard/src/components/: AssistantManager.tsx  AssistantPicker.tsx  BuildView.tsx  ConversationView.tsx  CreateFactoryModal.tsx  Dashboard.tsx  DiscoveryBoard.tsx  FactoryList.tsx  LoginForm.tsx  SettingsPage.tsx  Toast.tsx
dashboard/src/lib/: api.ts
